@@ -135,7 +135,7 @@ public class Global implements Cloneable
    public static long maxFileDescriptorCount;
 
    /** Version string, please change for new releases (4 digits) */
-   private String versionDefault = "2.2.0";
+   private String versionDefault = "2.2.1";
    /** This will be replaced by build.xml with the current version */
    private String version = "@version@";
    /** This will be replaced by build.xml with the current subversion revision number */
